--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4"
   }
